--- a/Forms/dashboard.ui
+++ b/Forms/dashboard.ui
@@ -111,7 +111,7 @@
            <number>60</number>
           </property>
           <item row="2" column="2">
-           <widget class="QPushButton" name="pushButton_rct_3">
+           <widget class="QPushButton" name="pushButton_Rapidcovid">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
               <horstretch>0</horstretch>
@@ -138,7 +138,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
            </widget>
           </item>
           <item row="2" column="0">
-           <widget class="QPushButton" name="pushButton_live_3">
+           <widget class="QPushButton" name="pushButton_Live">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
               <horstretch>0</horstretch>
@@ -168,7 +168,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
            </widget>
           </item>
           <item row="4" column="0">
-           <widget class="QPushButton" name="pushButton_users">
+           <widget class="QPushButton" name="pushButton_Users">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
               <horstretch>0</horstretch>
@@ -211,7 +211,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
            </spacer>
           </item>
           <item row="0" column="0">
-           <widget class="QPushButton" name="pushButton_vaccination">
+           <widget class="QPushButton" name="pushButton_Vaccination">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
               <horstretch>0</horstretch>
@@ -238,7 +238,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
            </widget>
           </item>
           <item row="0" column="2">
-           <widget class="QPushButton" name="pushButton_hospital">
+           <widget class="QPushButton" name="pushButton_Hospital">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
               <horstretch>0</horstretch>
@@ -272,7 +272,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
            </widget>
           </item>
           <item row="4" column="2">
-           <widget class="QPushButton" name="pushButton_new">
+           <widget class="QPushButton" name="pushButton_New">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
               <horstretch>0</horstretch>
