added landing page for RCT

--- a/resource.qrc
+++ b/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/resources">
         <file>img/dashboard.png</file>
+        <file>img/rct_img.jpg</file>
     </qresource>
 </RCC>
