--- a/Forms/dashboard.ui
+++ b/Forms/dashboard.ui
@@ -211,7 +211,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
            </spacer>
           </item>
           <item row="0" column="0">
-           <widget class="QPushButton" name="pushButton_Vaccination">
+           <widget class="QPushButton" name="pushButton_vaccine">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
               <horstretch>0</horstretch>
