--- a/Forms/dashboard.ui
+++ b/Forms/dashboard.ui
@@ -24,7 +24,7 @@
     <normaloff>../../../Downloads/mask.png</normaloff>../../../Downloads/mask.png</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(149, 169, 241);</string>
+   <string notr="true">background-color: qradialgradient(spread:reflect, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0.0113636 rgba(255, 25, 207, 255), stop:1 rgba(53, 120, 255, 255));</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -129,7 +129,7 @@
             </property>
             <property name="styleSheet">
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(0, 0, 73);
+color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));</string>
             </property>
             <property name="text">
@@ -159,7 +159,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
             </property>
             <property name="styleSheet">
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(0, 0, 73);
+color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));</string>
             </property>
             <property name="text">
@@ -186,7 +186,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
             </property>
             <property name="styleSheet">
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(0, 0, 73);
+color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));</string>
             </property>
             <property name="text">
@@ -229,7 +229,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
             </property>
             <property name="styleSheet">
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(0, 0, 73);
+color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));</string>
             </property>
             <property name="text">
@@ -256,7 +256,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
             </property>
             <property name="styleSheet">
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(0, 0, 73);
+color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));</string>
             </property>
             <property name="text">
@@ -290,7 +290,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210
             </property>
             <property name="styleSheet">
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(0, 0, 73);
+color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));</string>
             </property>
             <property name="text">
