--- a/resource.qrc
+++ b/resource.qrc
@@ -9,6 +9,6 @@
         <file>img/vaccine1.png</file>
         <file>img/hands-2847508_1920.jpg</file>
         <file>img/CoviCURE.png</file>
-
+        <file>img/test.png</file>
     </qresource>
 </RCC>
