--- a/Forms/choosehospitals.ui
+++ b/Forms/choosehospitals.ui
@@ -31,9 +31,15 @@
         </sizepolicy>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 0, 0, 255), stop:0.853933 rgba(188, 209, 232, 255));
+        <string notr="true">#pushButton_cancel{
+background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 0, 0, 255), stop:0.853933 rgba(188, 209, 232, 255));
+font: 14pt &quot;Arial Rounded MT Bold&quot;;
 
-border-radius: 7px;</string>
+border-radius: 5px;
+}
+#pushButton_cancel:hover{
+background-color:#FF0000;
+}</string>
        </property>
        <property name="text">
         <string>Cancel</string>
@@ -49,9 +55,15 @@ border-radius: 7px;</string>
         </sizepolicy>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
+        <string notr="true">#pushButton_ok{
+background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
+font: 14pt &quot;Arial Rounded MT Bold&quot;;
 
-border-radius: 7px;</string>
+border-radius: 7px;
+}
+#pushButton_ok:hover{
+background-color:#66c011;
+}</string>
        </property>
        <property name="text">
         <string>OK</string>
