--- a/Forms/login.ui
+++ b/Forms/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>537</width>
-    <height>350</height>
+    <width>642</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,7 +16,7 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(173, 181, 189);</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_4" rowstretch="2,0,0,0,0" columnstretch="4,0">
+  <layout class="QGridLayout" name="gridLayout_4" rowstretch="3,1,2,1,1" columnstretch="5,1">
    <item row="4" column="0">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
@@ -34,33 +34,7 @@
     </spacer>
    </item>
    <item row="2" column="1">
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QPushButton" name="pushButton_login">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-         <italic>false</italic>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
-font: 14pt &quot;Arial Rounded MT Bold&quot;;
-border-radius: 6px;</string>
-       </property>
-       <property name="text">
-        <string>Login</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <layout class="QHBoxLayout" name="horizontalLayout"/>
    </item>
    <item row="2" column="0">
     <layout class="QGridLayout" name="gridLayout" columnstretch="5,0">
@@ -81,6 +55,9 @@ border-radius: 6px;</string>
        <property name="styleSheet">
         <string notr="true">background-color: #fff;
 border-radius: 6px;</string>
+       </property>
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
        </property>
        <property name="placeholderText">
         <string>Password</string>
@@ -206,9 +183,40 @@ border-radius: 6px;</string>
     </layout>
    </item>
    <item row="0" column="1">
-    <widget class="QLabel" name="label_3">
+    <widget class="QLabel" name="Picture">
      <property name="text">
       <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPushButton" name="pushButton_login">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+       <italic>false</italic>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">#pushButton_login{
+background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
+font: 14pt &quot;Arial Rounded MT Bold&quot;;
+
+border-radius: 5px;
+}
+#pushButton_login:hover{
+background-color:#66c011;
+}</string>
+     </property>
+     <property name="text">
+      <string>Login</string>
      </property>
     </widget>
    </item>
