--- a/Forms/signup.ui
+++ b/Forms/signup.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>516</width>
-    <height>306</height>
+    <width>639</width>
+    <height>312</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -116,7 +116,7 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QLineEdit" name="lineEdit_password_4">
+      <widget class="QLineEdit" name="Phone">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -156,7 +156,7 @@ border-radius:5px;</string>
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit_email">
+      <widget class="QLineEdit" name="Fname">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -216,7 +216,7 @@ border-radius:5px;</string>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_password">
+      <widget class="QLineEdit" name="Sname">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -239,7 +239,7 @@ border-radius:5px;</string>
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_password_2">
+      <widget class="QLineEdit" name="Email">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -262,7 +262,7 @@ border-radius:5px;</string>
       </widget>
      </item>
      <item row="4" column="1">
-      <widget class="QLineEdit" name="lineEdit_password_3">
+      <widget class="QLineEdit" name="Password">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -279,13 +279,16 @@ border-radius:5px;</string>
         <string notr="true">background-color: #fff;
 border-radius:5px;</string>
        </property>
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
        <property name="placeholderText">
         <string>new password</string>
        </property>
       </widget>
      </item>
      <item row="5" column="1">
-      <widget class="QLineEdit" name="lineEdit_password_5">
+      <widget class="QLineEdit" name="RePassword">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -301,6 +304,9 @@ border-radius:5px;</string>
        <property name="styleSheet">
         <string notr="true">background-color: #fff;
 border-radius:5px;</string>
+       </property>
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
        </property>
        <property name="placeholderText">
         <string>confirm password</string>
@@ -323,8 +329,15 @@ border-radius:5px;</string>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
-font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
+        <string notr="true">#pushButton_signup{
+background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
+font: 14pt &quot;Arial Rounded MT Bold&quot;;
+
+border-radius: 5px;
+}
+#pushButton_signup:hover{
+background-color:#66c011;
+}</string>
        </property>
        <property name="text">
         <string>Signup</string>
