--- a/Forms/mainwindow.ui
+++ b/Forms/mainwindow.ui
@@ -46,7 +46,7 @@ font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QPushButton" name="pushButton_Signup">
+       <widget class="QPushButton" name="pushButton_Signup_3">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -89,7 +89,7 @@ border-radius: 5px;</string>
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QPushButton" name="pushButton_Login">
+       <widget class="QPushButton" name="pushButton_Login_3">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -132,7 +132,7 @@ border-radius: 5px;</string>
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QPushButton" name="pushButton_Exit">
+       <widget class="QPushButton" name="pushButton_Exit_3">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
