added hospital features and changed UI design of Main folder

--- a/resource.qrc
+++ b/resource.qrc
@@ -10,5 +10,11 @@
         <file>img/hands-2847508_1920.jpg</file>
         <file>img/CoviCURE.png</file>
         <file>img/test.png</file>
+        <file>img/background1.jpg</file>
+        <file>img/background2.jpg</file>
+        <file>img/background3.png</file>
+        <file>img/hosp.png</file>
+        <file>img/med.png</file>
+        <file>img/FreeVector-Geometric-Mesh-Pattern.jpg</file>
     </qresource>
 </RCC>
